samples/_failures_safe/1761187298_c3d592_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76f3d5a8.c: In function ‘main’:
./samples/SAFE/__tmp_76f3d5a8.c:145:26: error: missing terminating " character
  145 |     int cols2 = read_int("Enter columns for matrix
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_76f3d5a8.c:145:5: error: expected expression at end of input
  145 |     int cols2 = read_int("Enter columns for matrix
      |     ^~~
./samples/SAFE/__tmp_76f3d5a8.c:145:17: error: too few arguments to function ‘read_int’
  145 |     int cols2 = read_int("Enter columns for matrix
      |                 ^~~~~~~~
./samples/SAFE/__tmp_76f3d5a8.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_76f3d5a8.c:145:5: error: expected declaration or statement at end of input
  145 |     int cols2 = read_int("Enter columns for matrix
      |     ^~~
